<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/home"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:background="@null"
            android:hint="@string/search"
            android:inputType="text"
            android:lineSpacingExtra="100sp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textSize="@dimen/search" />

        <ImageButton
            android:id="@+id/arrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="255dp"
            android:scaleType="centerInside"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <View
        android:layout_width="500dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/recommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:gravity="left"
        android:text="@string/recommand"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommand"
        app:layout_constraintVertical_bias="0.076">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommand"
            app:layout_constraintVertical_bias="0.18">

            <ImageView
                android:id="@+id/wine_today_1_img"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:paddingHorizontal="50dp"
                android:src="@drawable/w1" />

            <ImageView
                android:id="@+id/wine_today_2_img"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:paddingHorizontal="50dp"
                android:src="@drawable/w2" />

            <ImageView
                android:id="@+id/wine_today_3_img"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:paddingHorizontal="50dp"
                android:src="@drawable/w3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommand"
            app:layout_constraintVertical_bias="0.18">

            <TextView
                android:id="@+id/wine_today_1_txt"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:paddingHorizontal="50dp"
                android:text="wine1"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/wine_today_2_txt"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:paddingHorizontal="50dp"
                android:text="wine2"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/wine_today_3_txt"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:paddingHorizontal="50dp"
                android:text="wine3"
                android:textSize="50sp" />
        </LinearLayout>
    </LinearLayout>



    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="testbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>